--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -39,9 +39,6 @@
     <p>Since TRI does not collect user data, no additional data rights are applicable.</p>
     
     <h2>Contact Us</h2>
-    <p>If you have any questions about this privacy policy, you can contact us:</p>
-    <ul>
-        <li>Email: <a href="mailto:tri.app.support@gmail.com">tri.app.support@gmail.com</a></li>
-    </ul>
+    <p>If you have any questions about this privacy policy, you can contact us at: <a href="mailto:tri.app.support@gmail.com">tri.app.support@gmail.com</a>.</p>
 </body>
 </html>
